force-app/main/default/objects/vlocity_cmt__AdServer__c/vlocity_cmt__AdServer__c.object-meta.xml
<CustomObject>
    <description>The Ad Server stores and delivers advertising content onto various platforms.</description>
    <label>Ad Server</label>
    <nameField>
        <label>Ad Server Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ad Servers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>