force-app/main/default/objects/vlocity_cmt__AdServer__c/fields/vlocity_cmt__AdServerApplicationName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdServerApplicationName__c</fullName>
    <description>The Ad Server Application Name is an arbitrary string identifying the Publisher&apos;s application.</description>
    <label>Ad Server Application Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>