force-app/main/default/objects/vlocity_cmt__AdServer__c/fields/vlocity_cmt__AdServerNetworkIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdServerNetworkIdentifier__c</fullName>
    <description>The Ad Server Network Id is used to identify the associated Publisher&apos;s network.</description>
    <externalId>true</externalId>
    <label>Ad Server Network Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>