force-app/main/default/objects/vlocity_cmt__AdServer__c/fields/vlocity_cmt__AllowedAdPriorityTypes__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AllowedAdPriorityTypes__c</fullName>
    <description>This will store the available Ad Types for the selected Ad Server. Examples : Standard, Sponsorship, Bulk, InHouse,Price Priority, Network.</description>
    <label>Allowed Ad Priority Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>InHouse</fullName>
            </value>
            <value>
                <fullName>Price_Priority</fullName>
                <label>Price Priority</label>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Click_Tracking</fullName>
                <label>Click Tracking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>