force-app/main/default/objects/vlocity_cmt__AdServer__c/fields/vlocity_cmt__NamedCredentialReference__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__NamedCredentialReference__c</fullName>
    <description>This is the Placeholder for the Named Credential which stores Ad Server&apos;s authentication details.</description>
    <label>Named Credential Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>